--- a/roles/etcd-certificates/tasks/main.yml
+++ b/roles/etcd-certificates/tasks/main.yml
@@ -7,40 +7,55 @@
     recurse: true
 
 - name: Set up a Certificate Authority
-  shell: cfssl gencert -initca {{ etcd_config_dir }}/ca.json | cfssljson -bare ca
+  shell: |
+    set -euo pipefail
+    cfssl gencert -initca {{ etcd_config_dir }}/ca.json | cfssljson -bare ca
   args:
     chdir: "{{ etcd_cert_dir }}"
     creates: "{{ item }}"
+    executable: /bin/bash
   with_items:
     - ca-key.pem
     - ca.csr
     - ca.pem
 
 - name: Create the Client certificate
-  shell: cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config={{ etcd_config_dir }}/config.json -profile=client {{ etcd_config_dir }}/client.json | cfssljson -bare client
+  shell: |
+    set -euo pipefail
+    cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config={{ etcd_config_dir }}/config.json \
+    -profile=client {{ etcd_config_dir }}/client.json | cfssljson -bare client
   args:
     chdir: "{{ etcd_cert_dir }}"
     creates: "{{ item }}"
+    executable: /bin/bash
   with_items:
     - client-key.pem
     - client.csr
     - client.pem
 
 - name: Create the Member certificate
-  shell: cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config={{ etcd_config_dir }}/config.json -profile=member {{ etcd_config_dir }}/member.json | cfssljson -bare member
+  shell:  |
+    set -euo pipefail
+    cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config={{ etcd_config_dir }}/config.json \
+    -profile=member {{ etcd_config_dir }}/member.json | cfssljson -bare member
   args:
     chdir: "{{ etcd_cert_dir }}"
     creates: "{{ item }}"
+    executable: /bin/bash
   with_items:
     - member-key.pem
     - member.csr
     - member.pem
 
 - name: Create the Server certificate
-  shell: cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config={{ etcd_config_dir }}/config.json -profile=server {{ etcd_config_dir }}/server.json | cfssljson -bare server
+  shell:  |
+    set -euo pipefail
+    cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config={{ etcd_config_dir }}/config.json \
+    -profile=server {{ etcd_config_dir }}/server.json | cfssljson -bare server
   args:
     chdir: "{{ etcd_cert_dir }}"
     creates: "{{ item }}"
+    executable: /bin/bash
   with_items:
     - server-key.pem
     - server.csr
