--- a/roles/wireguard-certificates/tasks/main.yml
+++ b/roles/wireguard-certificates/tasks/main.yml
@@ -7,7 +7,7 @@
     recurse: true
 
 - name: generate private key
-  shell: wg genkey
+  command: wg genkey
   register: wireguard_genkey
   changed_when: false
 
@@ -16,7 +16,11 @@
     wireguard_private_key: "{{ wireguard_genkey.stdout }}"
 
 - name: generate public key
-  shell: "echo {{ wireguard_private_key }} | wg pubkey"
+  shell: |
+    set -euo pipefail
+    echo {{ wireguard_private_key }} | wg pubkey
+  args:
+    executable: /bin/bash
   register: wireguard_pubkey
   changed_when: false
 
