--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,11 +1,12 @@
 [defaults]
-inventory = ./inventory
+inventory = inventory
 nocows = 1
 retry_files_enabled = false
 callback_whitelist = profile_tasks
 stdout_callback = debug
 gathering = explicit
 force_handlers = true
+host_key_checking = false
 
 [ssh_connection]
 pipelining = true
