--- a/roles/hcloud-provision/tasks/main.yml
+++ b/roles/hcloud-provision/tasks/main.yml
@@ -2,7 +2,9 @@
 
 - name: set ssh-key and token
   hcloud_ssh_key:
-    state: list
+    name: ci-key
+    public_key: ~/.ssh/hcloud/id_rsa.pub
+    state: present
     token : "{{ lookup('env','HCLOUD_TOKEN') }}"
   register: 'hcloud_ssh_keys'
 
