--- a/roles/linux/tasks/kernel-config.yml
+++ b/roles/linux/tasks/kernel-config.yml
@@ -8,30 +8,42 @@
     - "*    hard nofile 1048576"
     - "root soft nofile 1048576"
     - "root hard nofile 1048576"
-  notify: apply kernel configuration
-
-- name: configure global open files
-  lineinfile:
-    path: /etc/sysctl.conf
-    line: '{{ item }}'
-  with_items:
-    - "fs.file-max = 2097152"
-    - "fs.nr_open = 1048576"
-    - "fs.inotify.max_user_watches=1048576"
-  notify: apply kernel configuration
-
-- name: disable ipv6
-  lineinfile:
-    path: /etc/sysctl.conf
-    line: '{{ item }}'
-  with_items:
-    - "net.ipv6.conf.all.disable_ipv6 = 1"
-    - "net.ipv6.conf.default.disable_ipv6 = 1"
-    - "net.ipv6.conf.lo.disable_ipv6 = 1"
-  notify: apply kernel configuration
 
 - name: enable limits for user sessions
   lineinfile:
     path: /etc/pam.d/common-session
     line: 'session required pam_limits.so'
-  notify: apply kernel configuration
+
+- name: configure global open files
+  sysctl:
+    name: "{{ item.name }}"
+    value: "{{ item.value }}"
+    state: present
+  with_items:
+    - { name: "fs.file-max", value: "2097152" }
+    - { name: "fs.nr_open", value: "1048576" }
+    - { name: "fs.inotify.max_user_watches", value: "1048576" }
+
+- name: disable ipv6
+  sysctl:
+    name: "{{ item.name }}"
+    value: "{{ item.value }}"
+    state: present
+  with_items:
+    - { name: "net.ipv6.conf.all.disable_ipv6", value: "1" }
+    - { name: "net.ipv6.conf.default.disable_ipv6", value: "1" }
+    - { name: "net.ipv6.conf.lo.disable_ipv6", value: "1" }
+
+- name: configure sane networking defaults
+  sysctl:
+    name: "{{ item.name }}"
+    value: "{{ item.value }}"
+    state: present
+  with_items:
+    - { name: "net.core.somaxconn", value: "10000" }
+    - { name: "net.ipv4.tcp_max_syn_backlog", value: "3000" }
+    - { name: "net.ipv4.tcp_max_tw_buckets", value: "2000000" }
+    - { name: "net.ipv4.tcp_mtu_probing", value: "1" }
+    - { name: "net.ipv4.tcp_fin_timeout", value: "20" }
+    - { name: "net.ipv4.tcp_tw_reuse", value: "1" }
+    - { name: "net.ipv4.tcp_retries2", value: "5" }
