--- a/addons/registry-mirror.yaml
+++ b/addons/registry-mirror.yaml
@@ -17,8 +17,11 @@ spec:
         image: registry:2.6.2
         resources:
           limits:
-            cpu: 200m
-            memory: 200Mi
+            cpu: 1000m
+            memory: 400Mi
+          requests:
+            cpu: 100m
+            memory: 400Mi
         env:
         - name: REGISTRY_HTTP_ADDR
           value: :5000
