--- a/roles/master/defaults/main.yml
+++ b/roles/master/defaults/main.yml
@@ -1,22 +1,32 @@
 ---
-apiserver_max_requests_inflight:          "{{ nodes_count|int * kubelet_max_pods * 1.4 }}"
-apiserver_max_mutating_requests_inflight: "{{ nodes_count|int * kubelet_max_pods * 0.9 }}"
-apiserver_limit_target_ram_mb:            "{{ 350 + (nodes_count|int * kubelet_max_pods * 5) }}"
+number_of_pods:                           "{{ nodes_count|int * kubelet_max_pods|int }}"
+apiserver_max_requests_inflight:          "{{ number_of_pods|float * 1.4 }}"
+apiserver_max_mutating_requests_inflight: "{{ number_of_pods|float * 0.9 }}"
+apiserver_cache:                          "{{ number_of_pods|float * 1.1 }}" # https://applatix.com/making-kubernetes-production-ready-part-2/
 
 scheduler_api_qps:   "{{ apiserver_max_requests_inflight|int * 0.4 }}"
 scheduler_api_burst: "{{ apiserver_max_requests_inflight|int * 0.6 }}"
 
-apiserver_requests_cpu:             100m
-apiserver_requests_memory:          "{{ 20 + (apiserver_limit_target_ram_mb|int * 1.1) | int }}Mi"
-apiserver_limits_cpu:               1000m
+apiserver_target_cpu:             "{{ 300 + (0.33 * number_of_pods|float) }}"
+apiserver_target_memory:          "{{ 500 + (2.22 * number_of_pods|float) + apiserver_cache|float }}"
+controller_manager_target_cpu:    "{{  80 + (0.00 * number_of_pods|float) }}"
+controller_manager_target_memory: "{{  50 + (0.67 * number_of_pods|float) }}"
+scheduler_target_cpu:             "{{ 200 + (0.00 * number_of_pods|float) }}"
+scheduler_target_memory:          "{{  30 + (0.16 * number_of_pods|float) }}"
+
+safety_multiplier: 1.2
+apiserver_requests_cpu:             "{{ (safety_multiplier * apiserver_target_cpu|float)            |int }}m"
+apiserver_requests_memory:          "{{ (safety_multiplier * apiserver_target_memory|float)         |int }}Mi"
+controller_manager_requests_cpu:    "{{ (safety_multiplier * controller_manager_target_cpu|float)   |int }}m"
+controller_manager_requests_memory: "{{ (safety_multiplier * controller_manager_target_memory|float)|int }}Mi"
+scheduler_requests_cpu:             "{{ (safety_multiplier * scheduler_target_cpu|float)            |int }}m"
+scheduler_requests_memory:          "{{ (safety_multiplier * scheduler_target_memory|float)         |int }}Mi"
+
+apiserver_limits_cpu:               "{{ apiserver_requests_cpu }}"
 apiserver_limits_memory:            "{{ apiserver_requests_memory }}"
-controller_manager_requests_cpu:    50m
-controller_manager_requests_memory: "{{ 20 + (nodes_count|int * kubelet_max_pods) }}Mi"
-controller_manager_limits_cpu:      1000m
+controller_manager_limits_cpu:      "{{ controller_manager_requests_cpu }}"
 controller_manager_limits_memory:   "{{ controller_manager_requests_memory }}"
-scheduler_requests_cpu:             50m
-scheduler_requests_memory:          "{{ 100 + (nodes_count|int * kubelet_max_pods) }}Mi"
-scheduler_limits_cpu:               1000m
+scheduler_limits_cpu:               "{{ scheduler_requests_cpu }}"
 scheduler_limits_memory:            "{{ scheduler_requests_memory }}"
 
 authorization_mode: Node,RBAC
