--- a/addons/registry-mirror.yaml
+++ b/addons/registry-mirror.yaml
@@ -12,6 +12,7 @@ spec:
       labels:
         name: registry-mirror
     spec:
+      priorityClassName: system-cluster-critical
       containers:
       - name: mirror
         image: registry:2.6.2
