--- a/addons/weave-daemonset-k8s.yaml
+++ b/addons/weave-daemonset-k8s.yaml
@@ -160,6 +160,7 @@ items:
           labels:
             name: weave-net
         spec:
+          priorityClassName: system-node-critical
           containers:
             - name: weave
               command:
